fix: gitignore file

--- a/src/components/buttons/Buttons.module.scss
+++ b/src/components/buttons/Buttons.module.scss
@@ -3,7 +3,7 @@
 	width: 100px;
 }
 
-.button {
+.buttonLng {
 	padding: 3px 10px;
 	background-color: #ffdf8c;
 	border: 1px solid #ffdf8c;
@@ -18,7 +18,7 @@
 		border: 1px solid #cac6c5;
 	}
 }
-.active {
+.active{
 	background-color: #fe5f1e;
 	border: 1px solid #fe5f1e;
 }
